# frankentacit-deps

./: README.md  cargo.toml
fps/: Cargo.toml
fps/src/: fps_manager.rs  lib.rs
nnpipe/: .gitignore  Cargo.toml  readme.md
nnpipe/src/: builder.rs  components.rs  effects.rs  lib.rs  nnpipe.rs  nnpipe_old.rs  pipeline.rs  renderers.rs
nnpipe/src/builder/: pipeline_builder.rs  validation.rs
nnpipe/src/components/: fragment.rs  post.rs
nnpipe/src/components/fragment/: downsample.rs  feedback.rs  premultiply.rs  resample.rs
nnpipe/src/components/post/: blur.rs  brightness.rs  color_key.rs  composite.rs  darkness.rs  inversion.rs
nnpipe/src/effects/: bloom.rs  presets.rs
nnpipe/src/pipeline/: components.rs  pipe.rs
nnpipe/src/renderers/: color_utils.rs  line_segments.rs  particles.rs  point_heatmap.rs  texture_heatmap.rs
nnpipe/src/shaders/: passthrough.wgsl  passthrough_copy.wgsl
nnpipe/src/shaders/compute/: point_binning.wgsl  point_heatmap.wgsl  texture_heatmap.wgsl
nnpipe/src/shaders/fragment/: downsample.wgsl  feedback.wgsl  line_segments.wgsl  particles.wgsl  premultiply.wgsl  resample.wgsl
nnpipe/src/shaders/post/: blur.wgsl  color_key.wgsl  composite_simple.wgsl  darkness.wgsl  inversion.wgsl
prat/: Cargo.toml
prat/src/: README.md  clockservice.rs  lib.rs  main.rs  timing_thread.rs
